--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,40 +8,12 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=10.105.0.188:9092
       - JWT_SECRET=your-very-secret-key
       - JWT_EXPIRATION=86400000
-    depends_on:
-      - kafka
     networks:
-      - danxils-network
-
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.6.0
-    container_name: zookeeper
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - "2181:2181"
-    networks:
-      - danxils-network
-
-  kafka:
-    image: confluentinc/cp-kafka:7.6.0
-    container_name: kafka
-    ports:
-      - "9092:9092"
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    depends_on:
-      - zookeeper
-    networks:
-      - danxils-network
+      - kafka-oms_network
 
 networks:
-  danxils-network:
-    driver: bridge
+  kafka-oms_network:
+    external: true
